apple.yml
kind: Pod
apiVersion: v1
metadata:
  name: apple-app
  labels:
    app: apple
    application: shard-1
#  namespace: demo2
spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      args:
        - "-text=apple"

---

kind: Service
apiVersion: v1
metadata:
  name: apple-service
#  namespace: demo2
spec:
  selector:
    app: apple
  ports:
    - port: 5678 # Default port for image
