peach.yml
kind: Pod
apiVersion: v1
metadata:
  name: peach-app
  labels:
    app: peach
spec:
  containers:
    - name: peach-app
      image: hashicorp/http-echo
      args:
        - "-text=peach"

---

kind: Service
apiVersion: v1
metadata:
  name: peach-service
spec:
  selector:
    app: peach
  ports:
    - port: 5678 # Default port for image
