route-peach.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: peach-ingress
spec:
  host: peach.apps.ocp410.mclabs.us
  port:
    targetPort: 5678
  to:
    kind: Service
    name: peach-service
