route-pear.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pear-ingress
spec:
  host: pear.apps.ocp410.mclabs.us
  port:
    targetPort: 5678
  to:
    kind: Service
    name: pear-service
